Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/typevars/6804733/T6804733.out
T6804733.java:11:20: compiler.err.type.var.may.not.be.followed.by.other.bounds
1 error
